# FreeDistributedBuild

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
common/: CMakeLists.txt  global_constants.h  project.cpp  project.h
console/: CMakeLists.txt  FreeDistributedBuild.cpp  FreeDistributedBuild.h  FreeDistributedBuild.xml  Process.cpp  console.cpp  console.h  tcp_protobufserver.cpp  tcp_protobufserver.h
daemon/: CMakeLists.txt  FreeDistributedBuild.xml  Process.h  daemon.cpp  daemon.h  task.xml  tcp_protobufclient.cpp  tcp_protobufclient.h  udp_daemonserver.cpp  udp_daemonserver.h  window.cpp
protocol/: CMakeLists.txt  common.h  master.proto  protocol.proto  slave.proto  tcp_protobufnode.cpp  tcp_protobufnode.h  whoishere.h
